--- a/articles.html
+++ b/articles.html
@@ -1246,7 +1246,7 @@
                                          <a href="/rooms/35870760?adults=1&amp;children=0&amp;infants=0" target="_blank" aria-hidden="true" tabindex="-1" aria-label="Can’t rent anymore bcs of the war, HELP please!" class="_15tommw"></a>
                                          <div class="_yydl86">
                                           <div class="_1na7kj9b">
-                                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;">
+                                           <div class="img-middle" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;">
                                             <picture>
                                              <source srcset="https://a0.muscache.com/im/pictures/404f6658-e552-4cb1-a756-84ea8ceb22dc.jpg?im_w=720 1x" media="(max-width: 743px)" />
                                              <source srcset="https://a0.muscache.com/im/pictures/404f6658-e552-4cb1-a756-84ea8ceb22dc.jpg?im_w=720 1x" media="(min-width: 743.1px) and (max-width: 1127px)" />
@@ -1451,7 +1451,7 @@
                                          <a href="/rooms/3405072?adults=1&amp;children=0&amp;infants=0" target="_blank" aria-hidden="true" tabindex="-1" aria-label="Off the Grid and Forty Feet Up!" class="_15tommw"></a>
                                          <div class="_yydl86">
                                           <div class="_1na7kj9b">
-                                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;">
+                                           <div class="img-middle" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;">
                                             <picture>
                                              <source srcset="https://a0.muscache.com/im/pictures/79856427/29ea43a1_original.jpg?im_w=720 1x" media="(max-width: 743px)" />
                                              <source srcset="https://a0.muscache.com/im/pictures/79856427/29ea43a1_original.jpg?im_w=720 1x" media="(min-width: 743.1px) and (max-width: 1127px)" />
@@ -1656,7 +1656,7 @@
                                          <a href="/rooms/48297920?adults=1&amp;children=0&amp;infants=0" target="_blank" aria-hidden="true" tabindex="-1" aria-label="Wyndham Long Wharf! Just minutes from Thames St!" class="_15tommw"></a>
                                          <div class="_yydl86">
                                           <div class="_1na7kj9b">
-                                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;">
+                                           <div class="img-middle" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;">
                                             <picture>
                                              <source srcset="https://a0.muscache.com/im/pictures/3b446cc3-55f8-4f59-89fa-da0aeb155eba.jpg?im_w=720 1x" media="(max-width: 743px)" />
                                              <source srcset="https://a0.muscache.com/im/pictures/3b446cc3-55f8-4f59-89fa-da0aeb155eba.jpg?im_w=720 1x" media="(min-width: 743.1px) and (max-width: 1127px)" />
@@ -1857,7 +1857,7 @@
                                          <a href="/rooms/573551901167807310?adults=1&amp;children=0&amp;infants=0" target="_blank" aria-hidden="true" tabindex="-1" aria-label="Studio 45 przy lotnisku od WroclawApartament.pl" class="_15tommw"></a>
                                          <div class="_yydl86">
                                           <div class="_1na7kj9b">
-                                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;">
+                                           <div class="img-middle" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;">
                                             <picture>
                                              <source srcset="https://a0.muscache.com/im/pictures/miso/Hosting-573551901167807310/original/bd442d41-9113-4fff-9d55-26d2a3a3296c.jpeg?im_w=720 1x" media="(max-width: 743px)" />
                                              <source srcset="https://a0.muscache.com/im/pictures/miso/Hosting-573551901167807310/original/bd442d41-9113-4fff-9d55-26d2a3a3296c.jpeg?im_w=720 1x" media="(min-width: 743.1px) and (max-width: 1127px)" />
@@ -2065,7 +2065,7 @@
                                          <a href="/rooms/37775390?adults=1&amp;children=0&amp;infants=0" target="_blank" aria-hidden="true" tabindex="-1" aria-label="Southern Spirit in the Smokies! 2Bed/2Bath" class="_15tommw"></a>
                                          <div class="_yydl86">
                                           <div class="_1na7kj9b">
-                                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;"></div>
+                                           <div class="img-middle" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;"></div>
                                           </div>
                                          </div>
                                         </div>
@@ -2248,7 +2248,7 @@
                                          <a href="/rooms/19687130?adults=1&amp;children=0&amp;infants=0" target="_blank" aria-hidden="true" tabindex="-1" aria-label="Polderzicht for 2 persons" class="_15tommw"></a>
                                          <div class="_yydl86">
                                           <div class="_1na7kj9b">
-                                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;"></div>
+                                           <div class="img-middle" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;"></div>
                                           </div>
                                          </div>
                                         </div>
@@ -2431,7 +2431,7 @@
                                          <a href="/rooms/42088730?adults=1&amp;children=0&amp;infants=0" target="_blank" aria-hidden="true" tabindex="-1" aria-label="SWISSPEAK Resorts Brünig for 4 persons." class="_15tommw"></a>
                                          <div class="_yydl86">
                                           <div class="_1na7kj9b">
-                                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;"></div>
+                                           <div class="img-middle" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;"></div>
                                           </div>
                                          </div>
                                         </div>
@@ -2614,7 +2614,7 @@
                                          <a href="/rooms/53710559?adults=1&amp;children=0&amp;infants=0" target="_blank" aria-hidden="true" tabindex="-1" aria-label="Modern Loft Poblado, Nature, Super WiFi, AC, Pool" class="_15tommw"></a>
                                          <div class="_yydl86">
                                           <div class="_1na7kj9b">
-                                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;"></div>
+                                           <div class="img-middle" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;"></div>
                                           </div>
                                          </div>
                                         </div>
@@ -2801,7 +2801,7 @@
                                          <a href="/rooms/31649843?adults=1&amp;children=0&amp;infants=0" target="_blank" aria-hidden="true" tabindex="-1" aria-label="Swisspeak Resorts Studio superior for 2 persons" class="_15tommw"></a>
                                          <div class="_yydl86">
                                           <div class="_1na7kj9b">
-                                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;"></div>
+                                           <div class="img-middle" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;"></div>
                                           </div>
                                          </div>
                                         </div>
@@ -2988,7 +2988,7 @@
                                          <a href="/rooms/32817605?adults=1&amp;children=0&amp;infants=0" target="_blank" aria-hidden="true" tabindex="-1" aria-label="Marcello for 4 persons" class="_15tommw"></a>
                                          <div class="_yydl86">
                                           <div class="_1na7kj9b">
-                                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;"></div>
+                                           <div class="img-middle" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;"></div>
                                           </div>
                                          </div>
                                         </div>
@@ -3171,7 +3171,7 @@
                                          <a href="/rooms/18989335?adults=1&amp;children=0&amp;infants=0" target="_blank" aria-hidden="true" tabindex="-1" aria-label="Nido del Sorbino for 3 persons" class="_15tommw"></a>
                                          <div class="_yydl86">
                                           <div class="_1na7kj9b">
-                                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;"></div>
+                                           <div class="img-middle" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;"></div>
                                           </div>
                                          </div>
                                         </div>
@@ -3354,7 +3354,7 @@
                                          <a href="/rooms/21527818?adults=1&amp;children=0&amp;infants=0" target="_blank" aria-hidden="true" tabindex="-1" aria-label="Casaccia for 5 persons" class="_15tommw"></a>
                                          <div class="_yydl86">
                                           <div class="_1na7kj9b">
-                                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;"></div>
+                                           <div class="img-middle" role="img" aria-busy="false" aria-label="Image 1" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px; border-radius: 0px;"></div>
                                           </div>
                                          </div>
                                         </div>
