--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -4047,7 +4047,7 @@
                                               <div class="_10ejfg4u">
                                                 <div class="_czm8crp"><span>₱3,000.00 x 2 nights</span></div>
                                               </div>
-                                              <div class="_ni9axhe"><span class="_czm8crp"><span
+                                              <div class="cell-middle"><span class="_czm8crp"><span
                                                     class="_j1kt73">₱6,000.00</span></span>
                                               </div>
                                             </div>
@@ -4059,7 +4059,7 @@
                                               <div class="_10ejfg4u">
                                                 <div class="_czm8crp"><span>Cleaning fee</span></div>
                                               </div>
-                                              <div class="_ni9axhe"><span class="_czm8crp"><span
+                                              <div class="cell-middle"><span class="_czm8crp"><span
                                                     class="_j1kt73">₱300.00</span></span></div>
                                             </div>
                                           </div>
@@ -4070,7 +4070,7 @@
                                               <div class="_10ejfg4u">
                                                 <div class="_czm8crp"><span>Service fee</span></div>
                                               </div>
-                                              <div class="_ni9axhe"><span class="_czm8crp"><span
+                                              <div class="cell-middle"><span class="_czm8crp"><span
                                                     class="_j1kt73">₱889.42</span></span></div>
                                             </div>
                                           </div>
@@ -4085,7 +4085,7 @@
                                             <div class="_10ejfg4u">
                                               <div class="_1p3joamp"><span>Total</span></div>
                                             </div>
-                                            <div class="_ni9axhe"><span class="_1p3joamp"><span
+                                            <div class="cell-middle"><span class="_1p3joamp"><span
                                                   class="_j1kt73">₱7,189.42</span></span>
                                             </div>
                                           </div>
@@ -4107,7 +4107,7 @@
                                                 Airbnb website or app. <a href="/help/article/199" target="_blank"
                                                   class="_12jvhwr" aria-busy="false">Learn more</a></div>
                                             </div>
-                                            <div class="_ni9axhe"><svg viewBox="0 0 48 48" role="presentation"
+                                            <div class="cell-middle"><svg viewBox="0 0 48 48" role="presentation"
                                                 aria-hidden="true" focusable="false"
                                                 style="height: 32px; width: 32px; display: block; fill: rgb(255, 90, 95);">
                                                 <path
