--- a/resource-center/resources.html
+++ b/resource-center/resources.html
@@ -34,9 +34,9 @@
               <header role="banner" class="_1eqc9dx">
                 <div class="_dd1xod">
                   <div class="_hgs47m">
-                    <div class="_ni9axhe">
+                    <div class="cell-middle">
                       <div class="_hgs47m">
-                        <div class="_ni9axhe">
+                        <div class="cell-middle">
                           <a
                             href="/?logo=1"
                             aria-label="Airbnb homepage"
@@ -67,7 +67,7 @@
                           </a>
                         </div>
                         <div class="_10ejfg4u"></div>
-                        <div class="_ni9axhe">
+                        <div class="cell-middle">
                           <div style="margin-right: 16px">
                             <div class="_1ltxwi4">
                               <a
@@ -167,7 +167,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="hidden-xl _ni9axhe">
+                    <div class="hidden-xl cell-middle">
                       <div class="_cfvh61">
                         <div data-hideat="largeAndAbove">
                           <div style="margin-right: 24px">
@@ -590,7 +590,7 @@
                           <div class="_10ejfg4u">
                             <div class="_144bqbg">Become a host</div>
                           </div>
-                          <div class="_ni9axhe">
+                          <div class="cell-middle">
                             <div class="_5eu0k3">
                               <svg
                                 viewBox="0 0 24 24"
@@ -638,7 +638,7 @@
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Profile</div>
                             </div>
-                            <div class="_ni9axhe">
+                            <div class="cell-middle">
                               <div class="_5eu0k3">
                                 <svg
                                   viewBox="0 0 24 24"
@@ -673,7 +673,7 @@
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Settings</div>
                             </div>
-                            <div class="_ni9axhe">
+                            <div class="cell-middle">
                               <div class="_5eu0k3">
                                 <svg
                                   viewBox="0 0 24 24"
@@ -722,7 +722,7 @@
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Get help</div>
                             </div>
-                            <div class="_ni9axhe">
+                            <div class="cell-middle">
                               <div class="_5eu0k3">
                                 <svg
                                   viewBox="0 0 24 24"
@@ -771,7 +771,7 @@
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">English (US)</div>
                             </div>
-                            <div class="_ni9axhe">
+                            <div class="cell-middle">
                               <div class="_5eu0k3">
                                 <svg
                                   viewBox="0 0 24 24"
@@ -806,7 +806,7 @@
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">₱ PHP</div>
                             </div>
-                            <div class="_ni9axhe">
+                            <div class="cell-middle">
                               <div class="_5eu0k3">
                                 <svg
                                   viewBox="0 0 24 24"
