--- a/resource-center/video.html
+++ b/resource-center/video.html
@@ -36,9 +36,9 @@
               <header role="banner" class="_1eqc9dx">
                 <div class="_dd1xod">
                   <div class="_hgs47m">
-                    <div class="_ni9axhe">
+                    <div class="cell-middle">
                       <div class="_hgs47m">
-                        <div class="_ni9axhe">
+                        <div class="cell-middle">
                           <a
                             href="/?logo=1"
                             aria-label="Airbnb homepage"
@@ -69,7 +69,7 @@
                           </a>
                         </div>
                         <div class="_10ejfg4u"></div>
-                        <div class="_ni9axhe">
+                        <div class="cell-middle">
                           <div style="margin-right: 16px">
                             <div class="_1ltxwi4">
                               <a
@@ -169,7 +169,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="hidden-xl _ni9axhe">
+                    <div class="hidden-xl cell-middle">
                       <div class="_cfvh61">
                         <div data-hideat="largeAndAbove">
                           <div style="margin-right: 24px">
@@ -592,7 +592,7 @@
                           <div class="_10ejfg4u">
                             <div class="_144bqbg">Become a host</div>
                           </div>
-                          <div class="_ni9axhe">
+                          <div class="cell-middle">
                             <div class="_5eu0k3">
                               <svg
                                 viewBox="0 0 24 24"
@@ -640,7 +640,7 @@
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Profile</div>
                             </div>
-                            <div class="_ni9axhe">
+                            <div class="cell-middle">
                               <div class="_5eu0k3">
                                 <svg
                                   viewBox="0 0 24 24"
@@ -675,7 +675,7 @@
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Settings</div>
                             </div>
-                            <div class="_ni9axhe">
+                            <div class="cell-middle">
                               <div class="_5eu0k3">
                                 <svg
                                   viewBox="0 0 24 24"
@@ -724,7 +724,7 @@
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Get help</div>
                             </div>
-                            <div class="_ni9axhe">
+                            <div class="cell-middle">
                               <div class="_5eu0k3">
                                 <svg
                                   viewBox="0 0 24 24"
@@ -773,7 +773,7 @@
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">English (US)</div>
                             </div>
-                            <div class="_ni9axhe">
+                            <div class="cell-middle">
                               <div class="_5eu0k3">
                                 <svg
                                   viewBox="0 0 24 24"
@@ -808,7 +808,7 @@
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">₱ PHP</div>
                             </div>
-                            <div class="_ni9axhe">
+                            <div class="cell-middle">
                               <div class="_5eu0k3">
                                 <svg
                                   viewBox="0 0 24 24"
@@ -1130,7 +1130,7 @@
                           </div>
                           <div class="mb-10">
                               <div class="_hgs47m">
-                                  <div class="_ni9axhe">
+                                  <div class="cell-middle">
                                       <div class="relative" style="height:48px;width:48px;display:block">
                                           <div class="_bytwsb">
                                               <div class="relative" style="width:48px;height:48px" role="img" aria-busy="false"
