--- a/account/edit-photo.html
+++ b/account/edit-photo.html
@@ -844,7 +844,7 @@
                 <div class="_ncmdki">
                  <div class="_e5ldu0s" style="visibility: visible; height: 34px;">
                   <div class="_nncr1bm">
-                   <div class="_ni9axhe">
+                   <div class="cell-middle">
                     <div class="_1iti0ju">
                      <svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false" style="height: 16px; width: 16px; display: block; fill: rgb(118, 118, 118);">
                       <path
@@ -977,7 +977,7 @@
              <button type="button" class="_630kao" aria-expanded="false" aria-busy="false">
               <div class="_hgs47m">
                <div class="_10ejfg4u"><div class="_18ilrswp">Changes &amp; cancellations</div></div>
-               <div class="_ni9axhe">
+               <div class="cell-middle">
                 <div class="_z7e3cb" style="transform: rotate(0deg);">
                  <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 11px; width: 11px; display: block; fill: rgb(118, 118, 118);">
                   <path d="m16.29 4.3a1 1 0 1 1 1.41 1.42l-8 8a1 1 0 0 1 -1.41 0l-8-8a1 1 0 1 1 1.41-1.42l7.29 7.29z" fill-rule="evenodd"></path>
@@ -992,7 +992,7 @@
              <button type="button" class="_630kao" aria-expanded="false" aria-busy="false">
               <div class="_hgs47m">
                <div class="_10ejfg4u"><div class="_18ilrswp">Resolve a problem</div></div>
-               <div class="_ni9axhe">
+               <div class="cell-middle">
                 <div class="_z7e3cb" style="transform: rotate(0deg);">
                  <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 11px; width: 11px; display: block; fill: rgb(118, 118, 118);">
                   <path d="m16.29 4.3a1 1 0 1 1 1.41 1.42l-8 8a1 1 0 0 1 -1.41 0l-8-8a1 1 0 1 1 1.41-1.42l7.29 7.29z" fill-rule="evenodd"></path>
@@ -1007,7 +1007,7 @@
              <button type="button" class="_630kao" aria-expanded="false" aria-busy="false">
               <div class="_hgs47m">
                <div class="_10ejfg4u"><div class="_18ilrswp">Prices &amp; fees</div></div>
-               <div class="_ni9axhe">
+               <div class="cell-middle">
                 <div class="_z7e3cb" style="transform: rotate(0deg);">
                  <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 11px; width: 11px; display: block; fill: rgb(118, 118, 118);">
                   <path d="m16.29 4.3a1 1 0 1 1 1.41 1.42l-8 8a1 1 0 0 1 -1.41 0l-8-8a1 1 0 1 1 1.41-1.42l7.29 7.29z" fill-rule="evenodd"></path>
