--- a/help/ticket-selection.html
+++ b/help/ticket-selection.html
@@ -292,7 +292,7 @@
                           >
                             <div data-showat="mediumAndAbove">
                               <div class="_djxl322">
-                                <div class="_ni9axhe">
+                                <div class="cell-middle">
                                   <div class="inline-block">
                                     <nav aria-label="breadcrumb">
                                       <div class="flex">
