--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -35,9 +35,9 @@
               <header role="banner" class="_1eqc9dx">
                 <div class="_dd1xod">
                   <div class="_hgs47m">
-                    <div class="_ni9axhe">
+                    <div class="cell-middle">
                       <div class="_hgs47m">
-                        <div class="_ni9axhe">
+                        <div class="cell-middle">
                           <a
                             href="/?logo=1"
                             aria-label="Airbnb homepage"
@@ -68,7 +68,7 @@
                           </a>
                         </div>
                         <div class="_10ejfg4u"></div>
-                        <div class="_ni9axhe">
+                        <div class="cell-middle">
                           <div style="margin-right: 16px">
                             <div class="_1ltxwi4">
                               <a
@@ -168,7 +168,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="hidden-xl _ni9axhe">
+                    <div class="hidden-xl cell-middle">
                       <div class="_cfvh61">
                         <div data-hideat="largeAndAbove">
                           <div style="margin-right: 24px">
@@ -591,7 +591,7 @@
                           <div class="_10ejfg4u">
                             <div class="_144bqbg">Become a host</div>
                           </div>
-                          <div class="_ni9axhe">
+                          <div class="cell-middle">
                             <div class="_5eu0k3">
                               <svg
                                 viewBox="0 0 24 24"
@@ -639,7 +639,7 @@
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Profile</div>
                             </div>
-                            <div class="_ni9axhe">
+                            <div class="cell-middle">
                               <div class="_5eu0k3">
                                 <svg
                                   viewBox="0 0 24 24"
@@ -674,7 +674,7 @@
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Settings</div>
                             </div>
-                            <div class="_ni9axhe">
+                            <div class="cell-middle">
                               <div class="_5eu0k3">
                                 <svg
                                   viewBox="0 0 24 24"
@@ -723,7 +723,7 @@
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Get help</div>
                             </div>
-                            <div class="_ni9axhe">
+                            <div class="cell-middle">
                               <div class="_5eu0k3">
                                 <svg
                                   viewBox="0 0 24 24"
@@ -772,7 +772,7 @@
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">English (US)</div>
                             </div>
-                            <div class="_ni9axhe">
+                            <div class="cell-middle">
                               <div class="_5eu0k3">
                                 <svg
                                   viewBox="0 0 24 24"
@@ -807,7 +807,7 @@
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">₱ PHP</div>
                             </div>
-                            <div class="_ni9axhe">
+                            <div class="cell-middle">
                               <div class="_5eu0k3">
                                 <svg
                                   viewBox="0 0 24 24"
@@ -1248,7 +1248,7 @@
                           </div>
                           <div class="mb-10">
                               <div class="_hgs47m">
-                                  <div class="_ni9axhe">
+                                  <div class="cell-middle">
                                       <div class="relative" style="height:48px;width:48px;display:block">
                                           <div class="_bytwsb">
                                               <div class="relative" style="width:48px;height:48px" role="img" aria-busy="false"
